JUnit以外のライブラリバージョンを最新化