@@ -2,17 +2,17 @@ package gl8080.qiitabk.infrastructure.qiita;
 
 import java.io.IOException;
 import java.io.UncheckedIOException;
+import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-
-import org.apache.commons.io.FileUtils;
 
 public class QiitaApiToken {
 
     public String get() {
         Path tokenFile = Paths.get(System.getProperty("user.dir"), "qiita-token");
         try {
-            return FileUtils.readFileToString(tokenFile.toFile());
+            return Files.readString(tokenFile, StandardCharsets.UTF_8);
         } catch (IOException e) {
             throw new UncheckedIOException("トークンファイルの取得に失敗しました", e);
         }
